--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     />
 
     <title>Omnifood</title>
+    <link rel="stylesheet" href="content/css/general.css" />
     <link rel="stylesheet" href="content/css/style.css" />
   </head>
   <body>
@@ -101,7 +102,7 @@
           </h2>
         </div>
 
-        <div class="container grid grid--2-cols">
+        <div class="container grid grid--2-cols grid--center-v">
           <!-- STEP 01 -->
           <div class="step-text-box">
             <p class="step-number">01</p>
