--- a/index.html
+++ b/index.html
@@ -13,6 +13,15 @@
       rel="stylesheet"
     />
 
+    <script
+      type="module"
+      src="https://unpkg.com/ionicons@5.4.0/dist/ionicons/ionicons.esm.js"
+    ></script>
+    <script
+      nomodule=""
+      src="https://unpkg.com/ionicons@5.4.0/dist/ionicons/ionicons.js"
+    ></script>
+
     <title>Omnifood</title>
     <link rel="stylesheet" href="content/css/general.css" />
     <link rel="stylesheet" href="content/css/style.css" />
@@ -182,6 +191,41 @@
               alt="iPhone app delivery screen"
             />
           </div>
+        </div>
+      </section>
+      <section class="section-meals">
+        <div class="container">
+          <span class="subheading">Meals</span>
+          <h2 class="heading-secondary">
+            Omnifood AI chooses from 5,000+ recipes
+          </h2>
+        </div>
+        <div class="container grid grid--3-cols">
+          <div class="meal">
+            <img
+              src="content/img/meals/meal-1.jpg"
+              class="meal-img"
+              alt="Japanese Gyozas"
+            />
+            <span class="tag">Vegetarian</span>
+            <p class="meal-title">Japanese Gyozas</p>
+            <ul class="meal-attributes">
+              <li class="meal-atttribute">
+                <ion-icon name="flame-outline"></ion-icon>
+                <span>650 calories</span>
+              </li>
+              <li class="meal-atttribute">
+                <ion-icon name="restaurant-outline"></ion-icon
+                ><span> NutriScore &reg; 74</span>
+              </li>
+              <li class="meal-atttribute">
+                <ion-icon name="star-outline"></ion-icon> <span>4.9</span>
+                rating(537)
+              </li>
+            </ul>
+          </div>
+          <div class="meal">Meals</div>
+          <div class="list">List of diets</div>
         </div>
       </section>
     </main>
