finished pricing section, started features section

--- a/index.html
+++ b/index.html
@@ -461,13 +461,12 @@
         </div>
 
         <div class="container grid grid--2-cols">
-          <div class="pricing-plan">
+          <div class="pricing-plan pricing-plan--starter">
             <header class="plan-header">
               <p class="plan-name">Starter</p>
               <p class="plan-price"><span>$</span>399</p>
               <p class="plan-text">per month. That's just $13 per meal!</p>
             </header>
-
             <ul class="list">
               <li class="list-item">
                 <ion-icon class="list-icon" name="checkmark"></ion-icon>
@@ -475,32 +474,34 @@
               </li>
               <li class="list-item">
                 <ion-icon class="list-icon" name="checkmark"></ion-icon>
-                <span>Order times are between 11am and 9pm</span>
+                <span>Order from 11am to 9pm</span>
               </li>
               <li class="list-item">
                 <ion-icon class="list-icon" name="checkmark"></ion-icon>
                 <span>Delivery is free</span>
+              </li>
+              <li class="list-item">
+                <ion-icon class="list-icon" name="close"></ion-icon>
               </li>
             </ul>
             <div class="plan-sign-up">
               <a href="#" class="btn btn--full">Start eating well</a>
             </div>
           </div>
-          <div class="pricing-plan">
+          <div class="pricing-plan pricing-plan--complete">
             <header class="plan-header">
               <p class="plan-name">Complete</p>
               <p class="plan-price"><span>$</span>649</p>
               <p class="plan-text">per month. That's just $11 per meal!</p>
             </header>
-
             <ul class="list">
               <li class="list-item">
                 <ion-icon class="list-icon" name="checkmark"></ion-icon>
-                <span>2 meals per day</span>
+                <span><strong>2 meals</strong> per day</span>
               </li>
               <li class="list-item">
                 <ion-icon class="list-icon" name="checkmark"></ion-icon>
-                <span>Order times are 24/7</span>
+                <span>Order <strong>24/7</strong> </span>
               </li>
               <li class="list-item">
                 <ion-icon class="list-icon" name="checkmark"></ion-icon>
@@ -508,13 +509,20 @@
               </li>
               <li class="list-item">
                 <ion-icon class="list-icon" name="checkmark"></ion-icon>
-                <span>Get access to the lastest recipes</span>
+                <span>Get access to lastest recipes</span>
               </li>
             </ul>
             <div class="plan-sign-up">
               <a href="#" class="btn btn--full">Start eating well</a>
             </div>
           </div>
+        </div>
+
+        <div class="container grid grid--4-cols">
+          <div class="feature">Feature</div>
+          <div class="feature">Feature</div>
+          <div class="feature">Feature</div>
+          <div class="feature">Feature</div>
         </div>
       </section>
     </main>
