--- a/index.html
+++ b/index.html
@@ -560,6 +560,18 @@
           </div>
         </div>
       </section>
+      <section class="section-cta">
+        <div class="container">
+          <div class="cta">
+            <div class="cta-text-box">CTA</div>
+            <div
+              class="cta-image-box"
+              role="img"
+              aria-label="Women enjoying food"
+            ></div>
+          </div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
