--- a/index.html
+++ b/index.html
@@ -604,7 +604,7 @@
                   </select>
                 </div>
 
-                <button class="btn">Sign up now</button>
+                <button class="btn btn--form">Sign up now</button>
 
                 <!-- 
                 <input type="checkbox" />
