--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <!-- always include this line of code -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -25,6 +26,7 @@
     <title>Omnifood</title>
     <link rel="stylesheet" href="content/css/general.css" />
     <link rel="stylesheet" href="content/css/style.css" />
+    <link rel="stylesheet" href="content/css/queries.css" />
   </head>
   <body>
     <header class="header">
