--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <link rel="stylesheet" href="content/css/queries.css" />
   </head>
   <body>
-    <header class="header nav-open">
+    <header class="header">
       <a href="#">
         <img
           class="logo"
