script.js file provided by course

--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
       src="https://unpkg.com/ionicons@5.4.0/dist/ionicons/ionicons.js"
     ></script>
 
+    <script defer src="js/script.js"></script>
+
     <title>Omnifood</title>
     <link rel="stylesheet" href="content/css/general.css" />
     <link rel="stylesheet" href="content/css/style.css" />
