--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
       src="https://unpkg.com/ionicons@5.4.0/dist/ionicons/ionicons.js"
     ></script>
 
-    <!-- <script
+    <script
       defer
       src="https://unpkg.com/smoothscroll-polyfill@0.4.4/dist/smoothscroll.min.js"
-    ></script> -->
+    ></script>
 
     <script defer src="js/script.js"></script>
 
