--- a/index.html
+++ b/index.html
@@ -3,8 +3,24 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <!-- always include this line of code -->
+    <meta
+      name="description"
+      content="Omnifood is an AI-powered food
+    subscription that will make you eat healthy again, 365 days per year. It's
+    tailored to your personal tastes and nutritional needs."
+    />
+
+    <!--always include this line of code-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <!-- manifest.webmanifest is a file extension that is used for android to
+    recognize different favicons  -->
+    <!-- Favicon support -->
+    <link rel="icon" href="content/img/favicon.png" />
+    <link rel="apple-touch-icon" href="content/img/apple-touch-icon.png" />
+    <link rel="manifest" href="manifest.webmanifest" />
+
+    <!--  -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -30,7 +46,7 @@
 
     <script defer src="js/script.js"></script>
 
-    <title>Omnifood</title>
+    <title>Omnifood &mdash; Never cook again!</title>
     <link rel="stylesheet" href="content/css/general.css" />
     <link rel="stylesheet" href="content/css/style.css" />
     <link rel="stylesheet" href="content/css/queries.css" />
