--- a/index.html
+++ b/index.html
@@ -128,11 +128,17 @@
           </div>
 
           <div class="hero-img-box">
-            <img
-              src="content/img/hero.png"
-              class="hero-image"
-              alt="woman enjoying food, meals in storage container, and food bowls on a table"
-            />
+            <picture>
+              <source srcset="content/img/hero.webp" type="image/webp" />
+              <source srcset="content/img/hero-min.png" type="image/png" />
+              <img
+                src="content/img/hero-min.png"
+                class="hero-image"
+                alt="woman
+                enjoying food, meals in storage container, and food bowls on a
+                table"
+              />
+            </picture>
           </div>
         </div>
       </section>
