button click test

--- a/index.html
+++ b/index.html
@@ -646,7 +646,9 @@
                   </select>
                 </div>
 
-                <button class="btn btn--form">Sign up now</button>
+                <button onclick="alert('Hello world!')" class="btn btn--form">
+                  Sign up now
+                </button>
 
                 <!-- 
                 <input type="checkbox" />
