--- a/index.html
+++ b/index.html
@@ -611,7 +611,7 @@
                 first meal is on us!
               </p>
 
-              <form class="cta-form" name="sign-up" data-netlify="true">
+              <form class="cta-form" name="sign-up" netlify="true">
                 <div>
                   <label for="full-name">Full Name</label>
                   <input
@@ -646,9 +646,7 @@
                   </select>
                 </div>
 
-                <button onclick="alert('Hello world!')" class="btn btn--form">
-                  Sign up now
-                </button>
+                <button class="btn btn--form">Sign up now</button>
 
                 <!-- 
                 <input type="checkbox" />
