--- a/index.html
+++ b/index.html
@@ -611,12 +611,7 @@
                 first meal is on us!
               </p>
 
-              <form
-                class="cta-form"
-                name="sign-up"
-                method="POST"
-                data-netlify="true"
-              >
+              <form class="cta-form" name="sign-up" netlify>
                 <div>
                   <label for="full-name">Full Name</label>
                   <input
